2000-01-29  Mark Crichton  <crichton@gimp.org>

	* gdk-pixbuf-config: Oh dear, we weren't Telsa/Alan proof...
	put `libart-config --libs` in instead of -lart_lgpl.

2000-01-22  Federico Mena Quintero  <federico@helixcode.com>

	* gdk-pixbuf/io-pnm.c (pnm_read_raw_scanline): Return an error on
	invalid pnm type.
	(pnm_read_ascii_scanline): Initialize data and mask.

	* gdk-pixbuf/io-xpm.c (pixbuf_create_from_xpm): Initialize
	fallbackcolor to keep gcc happy.

	* configure.in: Bumped version number to 0.5.0.

	* gdk-pixbuf/pixops/timescale.c (dump_array): Removed unused variable.
	(main): Return 0.

	* gdk-pixbuf/pixops/pixops.c (pixops_composite_color_nearest): Put
	parentheses around + in a shift to remove a compiler warning.
	(pixops_process): Likewise.

	Patch from Ross Golder <rossigee@bigfoot.com> to create an RPM
	specfile:

	* configure.in: Added gdk-pixbuf.spec to AC_OUTPUT.

	* Makefile.am (EXTRA_DIST): Added gdk-pixbuf.spec.in

2000-01-22  Federico Mena Quintero  <federico@helixcode.com>

	* gdk-pixbuf/gnome-canvas-pixbuf.c (PixbufPrivate): Removed the
	x_set and y_set arguments.  Now they are always on and start with
	defaults of 0.0 in units.
	(gnome_canvas_pixbuf_class_init): Likewise.
	(gnome_canvas_pixbuf_set_arg): Likewise.
	(gnome_canvas_pixbuf_get_arg): Likewise.
	(compute_viewport_affine): Likewise; always use the priv->x and
	priv->y fields.

	* doc/tmpl/gnome-canvas-pixbuf.sgml: Modified to reflect the
	removal of the x_set/y_set arguments.

2000-01-21  Federico Mena Quintero  <federico@helixcode.com>

	* gdk-pixbuf/gdk-pixbuf.c (gdk_pixbuf_ref): Return the same pixbuf
	as the input parameter.

	* gdk-pixbuf/gdk-pixbuf-animation.c (gdk_pixbuf_animation_ref):
	Return the same animation as the input parameter.

2000-01-16  Elliot Lee  <sopwith@redhat.com>

	* gdk-pixbuf/Makefile.am: Don't link against libgnomecanvaspixbuf.la

2000-01-16  Federico Mena Quintero  <federico@helixcode.com>
